# modbus-watch

./: .gitignore  Cargo.toml  README.md  logs.log.2025-08-06
docs/: common.yaml  ultrabus.html  ultrabus.yaml  ultraslave.html  ultraslave.yaml
src/: main.rs  master.rs  slave.rs
src/aggregations/: build_aggregates.rs  mod.rs
src/api/: common.rs  config.rs  history.rs  mod.rs  value.rs
src/client/: mod.rs
src/client/aggregations/: build_aggregates.rs  mod.rs
src/client/api/: common.rs  config.rs  history.rs  mod.rs  value.rs
src/client/comm/: context.rs  mod.rs
src/client/data/: mod.rs  read.rs  write.rs
src/client/model/: connection.rs  mod.rs  slave.rs  value.rs
src/comm/: context.rs  mod.rs  value_processing.rs
src/common/: logging.rs  mod.rs  model.rs  value_processing.rs
src/data/: mod.rs  read.rs  tables.rs  write.rs
src/model/: connection.rs  mod.rs  slave.rs  value.rs
src/server/: mod.rs
src/server/api/: common.rs  config.rs  mod.rs  value.rs
src/server/comm/: context.rs  mod.rs
src/server/model/: connection.rs  mod.rs  slave.rs  value.rs
src/server/state/: mod.rs
src/value_processing/: mod.rs
