[package]
name = "modbus-watch"
version = "0.1.0"
edition = "2021"

[dependencies]
tweakable-modbus = { git = "https://github.com/Jordise2002/tweakable-modbus" }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
humantime-serde = "1.1.1"
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
serde_json = "1.0.140"
