[package]
name = "modbus-watch"
version = "0.1.0"
edition = "2021"

[dependencies]
#Modbus
tweakable-modbus = { git = "https://github.com/Jordise2002/tweakable-modbus" }
#Async
tokio = { version = "1.45.1", features = ["full"] }
#Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
humantime-serde = "1.1.1"
#Error handling
anyhow = "1.0.98"
#Arguments
clap = { version = "4.5.40", features = ["derive"] }
#DB
sql-builder = "3.1.1"
rusqlite = {version = "0.36", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.30.0"
